--- a/styles/ebook.css
+++ b/styles/ebook.css
@@ -1,1 +1,8 @@
 /* CSS for ebook */
+.book .book-body .page-wrapper .page-inner section.normal {
+    font-family: SimSun, "Microsoft YaHei", Serif;
+}
+
+.book .book-body .page-wrapper .page-inner section.normal p {
+    text-indent: 2em;
+}
